@@ -710,6 +710,7 @@ CONFIG_NET_WIRELESS_RTNETLINK=y
 #
 # CONFIG_WAN is not set
 CONFIG_PPP=m
+CONFIG_PPP_PREVENT_DROP_SESSION_ON_FULL_CPU_LOAD=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPP_FILTER is not set
 # CONFIG_PPP_ASYNC is not set
